Bug #48227 Table disappear after SR after "restart upgrade" from 6.3
Submitted: 22 Oct 13:27 Modified: 22 Oct 16:24
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:mysql-5.1-telco-7.0 OS:Any
Assigned to: Jonas Oreland Target Version:

[22 Oct 13:27] Jonas Oreland
Description:
1) start 63 cluster
2) shut it down
3) start 70 cluster using file-system from 6.3
4) create table T
5) perform system restart
6) notice table T is now gone

How to repeat:
see above

Suggested fix:
Problem is that the code that upgrades the format of the schema-file
from 6.3 format to 7.0 format, doesnt change the version number in the file
so on SR (5 above), it will rerun the upgrade code, which will interpret the
created table as a non-committed table.

Fix: Set new version number when converting files
[22 Oct 13:34] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/87765

3152 Jonas Oreland	2009-10-22
      ndb - bug#48227 - fix upgrade of schema file
[22 Oct 13:35] Bugs System
Pushed into 5.1.39-ndb-7.0.9 (revid:jonas@mysql.com-20091022113355-wbh2prrdroh9poae)
(version source revid:jonas@mysql.com-20091022113308-6783du53wjbwqp0o) (merge vers:
5.1.39-ndb-7.0.9) (pib:13)
[22 Oct 13:35] Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:jonas@mysql.com-20091022113442-qzjbuxem4a3ufb2j)
(version source revid:jonas@mysql.com-20091022113442-qzjbuxem4a3ufb2j) (merge vers:
5.1.39-ndb-7.1.0) (pib:13)
[22 Oct 13:41] Jonas Oreland
pushed to 7.0.9
[22 Oct 16:24] Jon Stephens
Documented bugfix in the NDB-7.0.9 changelog as follows:

        A table that was created following an upgrade from a MySQL
        Cluster NDB 6.3 release to MySQL Cluster NDB 7.0 (starting with
        version 6.4.0) or later was dropped by a system restart. This
        was due to a change in the format of NDB schema files and the
        fact that the upgrade of the format of existing NDB 6.3 schema
        files to the NDB 7.0 format failed to change the version number
        contained in the file; this meant that a system restart re-ran
        the upgrade routine, which interpreted the newly-created table
        as a non-committed table. Now the version number of upgraded NDB
        6.3 schema files is set correctly during the upgrade process.

Closed.