ndb - bug#48227 - fix upgrade of schema file