storage/ndb/test/ndbapi/testUpgrade.cpp
@@ -639,7 +639,6 @@ runPostUpgradeChecks(NDBT_Context* ctx, NDBT_Step* step)
    *   automatically by NDBT...
    *   so when we enter here, this is already tested
    */
-
   NdbBackup backup(GETNDB(step)->getNodeId()+1);
 
   ndbout << "Starting backup..." << flush;
@@ -649,6 +648,42 @@ runPostUpgradeChecks(NDBT_Context* ctx, NDBT_Step* step)
     return NDBT_FAILED;
   }
   ndbout << "done" << endl;
+
+  /**
+   * Bug48227
+   *   
+   */
+  Ndb* pNdb = GETNDB(step);
+  NdbDictionary::Dictionary *pDict = pNdb->getDictionary();
+  NdbDictionary::Table tab = * NDBT_Tables::getTable(0);
+  tab.setName("TRUP2");
+  pDict->dropTable(tab.getName());
+  if (pDict->createTable(tab) != 0)
+  {
+    ndbout_c("Failed to create table!");
+    ndbout << pDict->getNdbError() << endl;
+    NDBT_Tables::print(NDBT_Tables::getTable(0)->getName());
+    return NDBT_FAILED;
+  }
+
+  NdbRestarter res;
+  if (res.restartAll() != 0)
+  {
+    ndbout_c("restartAll() failed");
+    return NDBT_FAILED;
+  }
+
+  if (res.waitClusterStarted() != 0)
+  {
+    ndbout_c("waitClusterStarted() failed");
+    return NDBT_FAILED;
+  }
+
+  if (pDict->getTable(tab.getName()) == 0)
+  {
+    ndbout_c("Table disappered");
+    return NDBT_FAILED;
+  }
 
   return NDBT_OK;
 }
